Finished settings dialog

--- a/src/Underverse/Resources/GitHub.css
+++ b/src/Underverse/Resources/GitHub.css
@@ -1,3 +1,7 @@
+/*
+ * https://github.com/cloose/CuteMarkEd/blob/develop/app/styles/github.css
+ */
+
 body {
   font-family: Helvetica, arial, sans-serif;
   font-size: 14px;
