--- a/src/Underverse/mainwindow.ui
+++ b/src/Underverse/mainwindow.ui
@@ -74,6 +74,7 @@
     <property name="title">
      <string>Help</string>
     </property>
+    <addaction name="actionMarkdownHelp"/>
     <addaction name="actionSettings"/>
     <addaction name="separator"/>
     <addaction name="actionAbout"/>
@@ -141,6 +142,14 @@
   <action name="actionSettings">
    <property name="text">
     <string>Settings</string>
+   </property>
+  </action>
+  <action name="actionMarkdownHelp">
+   <property name="text">
+    <string>Markdown help</string>
+   </property>
+   <property name="shortcut">
+    <string>F1</string>
    </property>
   </action>
  </widget>
