--- a/src/Underverse/resources.qrc
+++ b/src/Underverse/resources.qrc
@@ -3,5 +3,6 @@
         <file>Resources/icon.png</file>
         <file>Resources/Default.css</file>
         <file>Resources/GitHub.css</file>
+        <file>Resources/MarkdownHelp.md</file>
     </qresource>
 </RCC>
