--- a/src/Underverse/resources.qrc
+++ b/src/Underverse/resources.qrc
@@ -4,5 +4,8 @@
         <file>Resources/Default.css</file>
         <file>Resources/GitHub.css</file>
         <file>Resources/MarkdownHelp.md</file>
+        <file>Resources/settings.png</file>
+        <file>Resources/view.png</file>
+        <file>Resources/write.png</file>
     </qresource>
 </RCC>
