fixed UTF8 problem; fixed indentation problem; added image/link/attachment support

--- a/src/Underverse/resources.qrc
+++ b/src/Underverse/resources.qrc
@@ -7,5 +7,9 @@
         <file>Resources/settings.png</file>
         <file>Resources/view.png</file>
         <file>Resources/write.png</file>
+        <file>Resources/image.png</file>
+        <file>Resources/link_attachment.png</file>
+        <file>Resources/link_global.png</file>
+        <file>Resources/link_markdown.png</file>
     </qresource>
 </RCC>
