--- a/src/Underverse/mainwindow.ui
+++ b/src/Underverse/mainwindow.ui
@@ -37,12 +37,6 @@
        <enum>Qt::Horizontal</enum>
       </property>
       <widget class="NotesBrowser" name="browser">
-       <property name="frameShape">
-        <enum>QFrame::NoFrame</enum>
-       </property>
-       <attribute name="headerVisible">
-        <bool>false</bool>
-       </attribute>
        <column>
         <property name="text">
          <string notr="true">1</string>
@@ -110,6 +104,28 @@
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolbar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>16</width>
+     <height>16</height>
+    </size>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionAddImage"/>
+   <addaction name="separator"/>
+   <addaction name="actionAddLinkGlobal"/>
+   <addaction name="actionAddLinkMarkdown"/>
+   <addaction name="actionAddLinkAttachment"/>
+  </widget>
   <action name="actionAbout">
    <property name="text">
     <string>About</string>
@@ -144,11 +160,6 @@
     <string>Ctrl+S</string>
    </property>
   </action>
-  <action name="actionBla">
-   <property name="text">
-    <string>bla</string>
-   </property>
-  </action>
   <action name="actionSettings">
    <property name="text">
     <string>Settings</string>
@@ -160,6 +171,42 @@
    </property>
    <property name="shortcut">
     <string>F1</string>
+   </property>
+  </action>
+  <action name="actionAddImage">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/Resources/image.png</normaloff>:/Resources/image.png</iconset>
+   </property>
+   <property name="text">
+    <string>Add image</string>
+   </property>
+  </action>
+  <action name="actionAddLinkGlobal">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/Resources/link_global.png</normaloff>:/Resources/link_global.png</iconset>
+   </property>
+   <property name="text">
+    <string>Add global link</string>
+   </property>
+  </action>
+  <action name="actionAddLinkMarkdown">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/Resources/link_markdown.png</normaloff>:/Resources/link_markdown.png</iconset>
+   </property>
+   <property name="text">
+    <string>Add local markdown link</string>
+   </property>
+  </action>
+  <action name="actionAddLinkAttachment">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/Resources/link_attachment.png</normaloff>:/Resources/link_attachment.png</iconset>
+   </property>
+   <property name="text">
+    <string>Add attachment link</string>
    </property>
   </action>
  </widget>
