added search functionality; added context menu to browser to add files/folders added edit mode toggling

--- a/src/Underverse/SettingsDialog.ui
+++ b/src/Underverse/SettingsDialog.ui
@@ -191,7 +191,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>Data folder:</string>
+          <string>Notes folder:</string>
          </property>
         </widget>
        </item>
