--- a/src/Underverse/SettingsDialog.ui
+++ b/src/Underverse/SettingsDialog.ui
@@ -127,20 +127,6 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="1" rowspan="3">
-    <widget class="Line" name="line_4">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="2">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="2">
     <widget class="QLabel" name="title">
      <property name="sizePolicy">
@@ -166,6 +152,20 @@
      </property>
      <property name="indent">
       <number>1</number>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" rowspan="3">
+    <widget class="Line" name="line_4">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
     </widget>
    </item>
@@ -214,13 +214,6 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QPushButton" name="change_data_folder">
-           <property name="text">
-            <string>Change</string>
-           </property>
-          </widget>
-         </item>
-         <item>
           <spacer name="horizontalSpacer">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
@@ -233,9 +226,16 @@
            </property>
           </spacer>
          </item>
+         <item>
+          <widget class="QPushButton" name="change_data_folder">
+           <property name="text">
+            <string>Change</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
-       <item row="3" column="0">
+       <item row="4" column="0">
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -247,6 +247,35 @@
           </size>
          </property>
         </spacer>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_8">
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Default mode when opening a new file.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+         <property name="text">
+          <string>Default mode:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QComboBox" name="mode">
+         <item>
+          <property name="text">
+           <string>View</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Edit</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Keep current mode</string>
+          </property>
+         </item>
+        </widget>
        </item>
       </layout>
      </widget>
