--- a/src/Underverse/mainwindow.ui
+++ b/src/Underverse/mainwindow.ui
@@ -266,7 +266,7 @@
   </action>
   <action name="actionToggleEditing">
    <property name="text">
-    <string>Toggle editing</string>
+    <string>Toggle edit/view mode</string>
    </property>
    <property name="shortcut">
     <string>F2</string>
